[package]
name = "kaft"
version = "0.0.1"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]

[dependencies]
clap = "2.32.0"
futures = "0.1.25"
zookeeper = "0.5.5"
rdkafka = "0.17.0"
ncurses = "5.97.0"
terminal_size = "0.1.8"
chrono = "0.4.6"
signal-hook = "0.1.6"

#[patch.crates-io]
#ncurses = { path = "../ncurses-rs" }
