[package]
name = "kaft"
version = "0.0.1"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
futures = "0.1.25"
zookeeper = "0.5.5"
rdkafka = "0.17.0"
# in backit, I don't use ncurses but some terminal wrapper library
#ncurses = "5.98.0"
terminal_size = "0.1.8"
chrono = "0.4.6"
signal-hook = "0.1.6"
serde = "1.0.85"
serde_derive = "1.0.85"
rmp = "0.8.7"
rmp-serde = "0.13.7"
rmp-serialize = "0.8.0"
rmpv = "0.4.0"
serde_cbor = "0.9.0"
hex = "0.3.2"

#[patch.crates-io]
#ncurses = { path = "../ncurses-rs" }
